--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
         <p>
             I am a network expert and web developer .
         </p>
-        <h2>What I'm working on</h2>
+        <h2>SOCIAL HANDLES</h2>
         <p>
-             <a href=https://www.youtube.com/@rohitkasote>Visit My Youtube Channel</a>
+             <a href=https://www.youtube.com/@rohitkasote target="_blank">Visit My Youtube Channel</a>
         </p>
     </body>
 </html>
