--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
         </p>
         <h2>SOCIAL HANDLES</h2>
         <p>
-             <a href=https://www.youtube.com/@rohitkasote target="_blank">Visit My Youtube Channel</a>
+             <a href=https://www.youtube.com/@rohitkasote target="_blank">YOUTUBE</a>
+            <a href=https://www.instagram.com/ig_rohitrk target="_blank">INSTAGRAM</a>
+            <a href=https://x.com/twr_rohitrk target="_blank">TWITTER/X</a>
         </p>
     </body>
 </html>
