--- a/index.html
+++ b/index.html
@@ -17,5 +17,8 @@
         <p>
             <a href=https://x.com/twr_rohitrk target="_blank">TWITTER/X</a>
         </p>
+        <p1>
+            I am currently not working on this website but sool i will design this domain 
+        </p1>
     </body>
 </html>
