--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <a href=https://x.com/twr_rohitrk target="_blank">TWITTER/X</a>
         </p>
         <p1>
-            I am currently not working on this website but sool i will design this domain 
+            I am currently not working on this website but soon i will design this domain 
         </p1>
     </body>
 </html>
