--- a/index.html
+++ b/index.html
@@ -1,24 +1,42 @@
-<html>
-    <h1>
-        Hey, I'm RohitKasote
-    </h1>
-    <body>
-        <h2>About me</h2>
-        <p>
-            I am a network expert and web developer .
-        </p>
-        <h2>SOCIAL HANDLES</h2>
-        <p>
-             <a href=https://www.youtube.com/@rohitkasote target="_blank">YOUTUBE</a>
-        </p>
-        <p>
-            <a href=https://www.instagram.com/ig_rohitrk target="_blank">INSTAGRAM</a>
-        </p>
-        <p>
-            <a href=https://x.com/twr_rohitrk target="_blank">TWITTER/X</a>
-        </p>
-        <p1>
-            I am currently not working on this website but soon i will design this domain 
-        </p1>
-    </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
+    <link rel="stylesheet" href="style.css">
+    <title>Rohit Kasote</title>
+</head>
+<body>
+    <header>
+        <a href="#" class="logo">Rohit</a>
+
+        <nav>
+            <a href="#" class="active">Home</a>
+            <a href="#" >Services</a>
+            <a href="#" >Skills</a>
+            <a href="#" >Education</a>
+            <a href="#" >Experience</a>
+            <a href="#" >Contact</a>
+        </nav>
+    </header>
+    <section class="home">
+        <div class="home-jpg">
+            <img src="main.jpg" alt="">
+        </div>
+        <div class="home-content">
+            <h1>Hi, it's <span>Rohit</span></h1>
+            <h3 class="typing-text"> I'm a <span></span> </h3>
+            <p>Providing advice and troubleshooting problems in computer networks. · Installing, configuring, testing and maintaining new and existing IT infrastructure</p>
+            <div class="social-icons">
+                <a href="https://www.youtube.com/@rohitkasote" target="_blank"><i class="fa-brands fa-youtube"></i></a>
+                <a href="https://github.com/rohitkasote" target="_blank"><i class="fa-brands fa-github"></i></a>
+                <a href="https://x.com/twr_rohitrk" target="_blank"><i class="fa-brands fa-x-twitter"></i></a>
+                <a href="https://www.instagram.com/ig_rohitrk/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+
+            </div>   
+        </div>
+    </section>vvvv
+    
+</body>
 </html>
