--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
         <div class="home-content">
             <h1>Hi, it's <span>Rohit</span></h1>
             <h3 class="typing-text"> I'm a <span></span> </h3>
-            <p>Providing advice and troubleshooting problems in computer networks. · Installing, configuring, testing and maintaining new and existing IT infrastructure</p>
+            <p>Providing advice and troubleshooting problems in computer networks. 
+                · Installing, configuring, testing and maintaining new and existing IT infrastructure</p>
             <div class="social-icons">
                 <a href="https://www.youtube.com/@rohitkasote" target="_blank"><i class="fa-brands fa-youtube"></i></a>
                 <a href="https://github.com/rohitkasote" target="_blank"><i class="fa-brands fa-github"></i></a>
