--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <a href="#" class="logo">Rohit</a>
+        <a href="#" class="logo">RK</a>
 
         <nav>
             <a href="#" class="active">Home</a>
