--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="style.css">
     <title>Rohit Kasote</title>
 </head>
-    <link rel="shortcut icon" href="https://github.com/rohitkasote/rohitrk/blob/main/favicon.ico" type="image/x-icon">
-<link rel="icon" href="https://github.com/rohitkasote/rohitrk/blob/main/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="Logo.png" type="image/x-icon">
+<link rel="icon" href="Logo.png" type="image/x-icon">
 <body>
     <header>
         <a href="https://rohitkasote.online/" class="logo">RK</a>
